--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'layout/main';
 @import 'layout/section';
 @import 'layout/footer';
+@import 'layout/button';
 
 /* =====================================================
   3.0 - Object
@@ -45,6 +46,7 @@
 @import 'object/project/module/hero';
 @import 'object/project/module/heading';
 @import 'object/project/module/footer';
+@import 'object/project/module/contents';
 @import 'object/project/module/button';
 
 /*
