--- a/src/scss/object/component/_button.scss
+++ b/src/scss/object/component/_button.scss
@@ -1,18 +1,20 @@
 @charset 'UTF-8';
+
 /*
   Button
 */
-.c-button {
-  display: inline-block;
-  border: 0;
-  background-color: transparent;
-  cursor: pointer;
-  appearance: none;
-  transition: box-shadow .3s ease-in-out;
-  box-shadow: 0 0 80px 40px rgba(131, 199, 225, 0);
 
-  &:focus {
-     box-shadow: 0 0 4px 0px rgba(131, 199, 225, .8);
-     outline: none;
-  }
+.c-button {
+    display: inline-block;
+    text-decoration: none;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    appearance: none;
+    transition: box-shadow .3s ease-in-out;
+    box-shadow: 0 0 80px 40px rgba(131, 199, 225, 0);
+    &:focus {
+        box-shadow: 0 0 4px 0px rgba(131, 199, 225, .8);
+        outline: none;
+    }
 }
