--- a/src/scss/object/component/_heading.scss
+++ b/src/scss/object/component/_heading.scss
@@ -1,16 +1,18 @@
 @charset 'UTF-8';
+
 /*
   Heading
 */
+
 .c-heading__primary {
-    font-weight: 600;
     text-align: center;
-    font-size: 1rem;
+    font-weight: bold;
+    font-size: 8vw;
     margin-bottom: set-size(24px);
-  }
+}
 
 @include mq(tab) {
-  .c-heading__primary {
-      margin-bottom: set-size(64px);
+    .c-heading__primary {
+        margin-bottom: set-size(64px);
     }
-  }
+}
