--- a/src/scss/object/project/module/_button.scss
+++ b/src/scss/object/project/module/_button.scss
@@ -1,61 +1,81 @@
 @charset 'UTF-8';
 
 /*
-  Button
+  Basic Button 
 */
-.button-hamburger {
-  position: absolute;
-  top: 0;
-  right: 2.5%;
-  bottom: 0;
-  z-index: 1;
-  width: 24px;
-  height: 24px;
-  margin: auto 0;
-  border: 0;
-  outline: 0;
-  background-color: transparent;
-  cursor: pointer;
-  -webkit-appearance: none; /* Chrome, Safari, Opera, Android */
-     -moz-appearance: none; /* Firefox */
-          appearance: none; /* IE非対応 */
+
+.p-button {
+    display: inline-block;
+    margin: 0 auto;
+    width: 200px;
+    background-color: #000;
+    padding: 1rem 0;
+    color: #fff;
+    text-align: center;
 }
 
-.hamburger {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 18px;
-  height: 2px;
-  margin: auto;
-  border-radius: 4px;
-  background-color: #263238;
+
+/*
+  Hamburger Button
+*/
+
+.p-button--hamburger {
+    position: absolute;
+    top: 12px;
+    right: 2.5%;
+    z-index: 1;
+    margin: auto 0;
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
 }
 
-.hamburger:before,
-.hamburger:after {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-  background-color: inherit;
-  content: '';
+.p-button--hamburger__line {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    margin: auto;
+    width: 18px;
+    height: 2px;
+    background-color: #263238;
 }
 
-.hamburger:before {
-  top: -5px;
+.p-button--hamburger__line:before,
+.p-button--hamburger__line:after {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    content: '';
+    transition: transform .2s ease-in-out;
 }
 
-.hamburger:after {
-  top: 5px;
+.p-button--hamburger__line:before {
+    top: -5px;
 }
 
-@media screen and (min-width: 768px) {
-  .button-hamburger {
-    display: none;
-  }
+.p-button--hamburger__line:after {
+    top: 5px;
+}
+
+.is-active-drawer .p-button--hamburger__line {
+    background-color: transparent;
+}
+
+.is-active-drawer .p-button--hamburger__line:before,
+.is-active-drawer .p-button--hamburger__line:after {
+    top: 0;
+    background-color: #212121;
+}
+
+.is-active-drawer .p-button--hamburger__line:before {
+    transform: rotate(-45deg);
+}
+
+.is-active-drawer .p-button--hamburger__line:after {
+    transform: rotate(45deg);
 }
