--- a/src/scss/object/project/module/_footer.scss
+++ b/src/scss/object/project/module/_footer.scss
@@ -3,3 +3,31 @@
 /*
   Footer
 */
+
+.p-footer {
+    padding: set-size(40px) 0;
+    background-color: rgb(247, 247, 247);
+    text-align: center;
+    @include mq(tab) {
+        padding: set-size(80px) 0;
+    }
+}
+
+.p-footer__title {
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.p-footer__address {
+    font-size: .75rem;
+    margin-bottom: .5rem;
+}
+
+.p-footer__tel {
+    font-size: .75rem;
+    margin-bottom: 2rem;
+}
+
+.p-footer__copyright {
+    font-size: .75rem;
+}
