--- a/src/scss/object/project/module/_footer.scss
+++ b/src/scss/object/project/module/_footer.scss
@@ -6,7 +6,7 @@
 
 .p-footer {
     padding: set-size(40px) 0;
-    background-color: rgb(247, 247, 247);
+    background-color: $sub-color;
     text-align: center;
     @include mq(tab) {
         padding: set-size(80px) 0;
