--- a/src/scss/object/project/module/_global-nav.scss
+++ b/src/scss/object/project/module/_global-nav.scss
@@ -12,7 +12,7 @@
     left: 0;
     visibility: hidden;
     padding-top: set-size(64px);
-    background-color: #fff;
+    background-color: $main-color;
     opacity: 0;
     transition: all .3s ease-in-out;
 }
@@ -27,7 +27,7 @@
 }
 
 .p-globalNav li a:hover {
-    color: #ccc;
+    color: $hint-text-color;
 }
 
 .is-active-drawer .p-globalNav {
