--- a/src/scss/object/project/module/_contents.scss
+++ b/src/scss/object/project/module/_contents.scss
@@ -1,6 +1,15 @@
 @charset 'UTF-8';
 
 /*
+  Section
+*/
+
+.p-section {
+    margin-top: 9rem;
+}
+
+
+/*
   Background Image Fixed
 */
 
@@ -10,6 +19,10 @@
 
 .p-fixedBackground.--secondary {
     background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/top_works.jpg');
+}
+
+.p-fixedBackground.--aboutus {
+    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/aboutus_hero.jpg');
 }
 
 .p-fixedBackground {
@@ -39,10 +52,70 @@
 
 
 /*
-  Top News
+  Define List
 */
 
-.p-map {
-    width: 100%;
-    height: 600px;
+.p-defineList dt {
+    margin-top: 2em;
+    font-size: .75em;
+}
+
+.p-defineList dd {
+    margin-top: 1em;
+    font-size: .75em;
+}
+
+.p-defineNews dt {
+    float: left;
+    clear: left;
+    padding: 1em;
+    width: 120px;
+}
+
+.p-defineNews dd {
+    padding: 1em 0 1em 120px;
+    border-bottom: 1px solid #ddd;
+    line-height: 1.5;
+}
+
+.p-defineNews dd a {
+    color: #212121;
+    text-decoration: none;
+}
+
+.p-defineNews dd a:hover {
+    color: #999;
+}
+
+@media screen and (min-width: 768px) {
+    .p-defineList {
+        overflow: hidden;
+        margin: 0 auto;
+        max-width: 650px;
+        width: 100%;
+    }
+    .p-defineList dt {
+        display: flex;
+        float: left;
+        clear: left;
+        margin: 0;
+        padding: 1em;
+        width: 300px;
+        font-size: 1em;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .p-defineList dd {
+        margin: 0;
+        padding: 1em;
+        font-size: 1em;
+    }
+    .p-defineList dt:after {
+        display: block;
+        margin-right: 2em;
+        max-width: 50%;
+        width: 100%;
+        border-bottom: 1px dashed #212121;
+        content: '';
+    }
 }
