--- a/src/scss/object/project/module/_footer.scss
+++ b/src/scss/object/project/module/_footer.scss
@@ -5,6 +5,7 @@
 */
 
 .p-footer {
+    margin-top: 4rem;
     padding: set-size(40px) 0;
     background-color: $sub-color;
     text-align: center;
