--- a/src/scss/object/project/module/_heading.scss
+++ b/src/scss/object/project/module/_heading.scss
@@ -3,3 +3,11 @@
 /*
   Heading
 */
+
+.p-heading__primary {
+    font-size: 2.5rem;
+}
+
+.p-heading__primary.--center {
+    text-align: center;
+}
