--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,7 +35,7 @@
 @import 'object/component/media';
 @import 'object/component/heading';
 @import 'object/component/contents';
-@import 'object/component/dependence'; // WordPress など自動で付与されるクラスを制御
+@import 'object/component/dependence'; // WordPress, プラグインなどの独自ラスを制御
 
 /*
   3.2 - Project
