--- a/src/scss/object/project/module/_contents.scss
+++ b/src/scss/object/project/module/_contents.scss
@@ -1,11 +1,9 @@
-@charset 'UTF-8';
-
 /*
   Section
 */
 
-.p-section {
-    margin-top: 9rem;
+*/ .p-section {
+    margin-top: 5rem;
 }
 
 
@@ -118,4 +116,59 @@
         border-bottom: 1px dashed #212121;
         content: '';
     }
+}
+
+
+/*
+  Contact
+*/
+
+.p-form__row {
+    position: relative;
+    margin-top: 3rem;
+}
+
+.p-form__row:last-of-type {
+    margin-top: 5rem;
+}
+
+.p-form__item {
+    position: relative;
+    width: 100%;
+}
+
+.p-form__label {
+    position: absolute;
+    top: 27px;
+    transition: .3s all ease;
+    pointer-events: none;
+}
+
+.c-input__text {
+    height: 27px;
+    padding: 27px 0;
+    border: none;
+    border-bottom: 1px solid #ddd;
+    outline: none;
+    appearance: none;
+    cursor: auto;
+    width: 100%;
+}
+
+.c-textarea {
+    margin-top: 1rem;
+}
+
+.c-textarea textarea {
+    outline: none;
+    appearance: none;
+    border: 1px solid #ddd;
+    width: 100%;
+    height: 10rem;
+}
+
+.is-float .p-form__label {
+    top: -15px;
+    color: #666;
+    transform: scale(.66);
 }
