--- a/src/scss/object/project/module/_button.scss
+++ b/src/scss/object/project/module/_button.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
     width: 200px;
     background-color: $accent-color;
-    padding: 1rem 0;
+    padding: set-size(16px) 0;
     color: $secondary-text-color;
     text-align: center;
 }
