--- a/src/scss/object/component/_heading.scss
+++ b/src/scss/object/component/_heading.scss
@@ -4,7 +4,7 @@
   Heading
 */
 
-.c-heading__primary {
+.p-heading__primary {
     text-align: center;
     font-weight: bold;
     font-size: 8vw;
@@ -12,7 +12,7 @@
 }
 
 @include mq(tab) {
-    .c-heading__primary {
+    .p-heading__primary {
         margin-bottom: set-size(64px);
     }
 }
