--- a/src/scss/object/component/_dependence.scss
+++ b/src/scss/object/component/_dependence.scss
@@ -1,4 +1,5 @@
 @charset 'UTF-8';
+// プラグインやWordPressなどの独自クラスの制御
 
 /*
   Swiper.js
@@ -65,11 +66,7 @@
     padding: 0;
 }
 
-
-/*
-  Pagination
-*/
-
+// ページネーション
 .nav-links {
     margin-top: set-size(32px);
     text-align: center;
