細かな修正

--- a/src/scss/inc/_setting.scss
+++ b/src/scss/inc/_setting.scss
@@ -21,7 +21,7 @@ $primary-text-color: #212121;
 // セカンダリーカラー
 $secondary-text-color: #fff;
 // 補足などの色
-$hint-text-color: #ccc;
+$hint-text-color: #ddd;
 //====================================
 //  Typeface
 //====================================
