--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -1,3 +1,11 @@
 /*
   Section
 */
+
+.l-section {
+    padding-top: set-size(48px);
+}
+
+.l-section.--heroLess {
+    padding-top: set-size(120px);
+}
