--- a/src/scss/object/project/module/_hero.scss
+++ b/src/scss/object/project/module/_hero.scss
@@ -4,16 +4,14 @@
   Hero
 */
 
+.p-hero {
+    position: relative;
+}
+
 .p-heroTitle {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-}
-
-.p-heroTitle__text {
-    text-align: center;
-    font-weight: bold;
-    font-size: 13vw;
 }
