--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -11,6 +11,7 @@
 body {
     color: $primary-text-color;
     font-family: $font-set-primary;
+    line-height: 1.3;
 }
 
 html {
@@ -26,7 +27,7 @@ img {
 a {
     text-decoration: none;
     color: $primary-text-color;
-    transition: background-color .3s ease-in-out, border .3s ease-in-out, color .3s ease-in-out, transform .3s ease-in-out, opacity .3s ease-in-out;
+    transition: all .3s ease-in-out;
     &:before,
     &:after {
         transition: inherit;
