--- a/src/scss/object/component/_button.scss
+++ b/src/scss/object/component/_button.scss
@@ -14,7 +14,7 @@
     transition: box-shadow .3s ease-in-out;
     box-shadow: 0 0 80px 40px rgba(131, 199, 225, 0);
     &:focus {
-        box-shadow: 0 0 4px 0px rgba(131, 199, 225, .8);
+        box-shadow: none;
         outline: none;
     }
 }
