--- a/src/scss/object/project/module/_heading.scss
+++ b/src/scss/object/project/module/_heading.scss
@@ -5,14 +5,31 @@
 */
 
 .p-heading__primary {
-    font-size: set-size(40px);
+    font-weight: bold;
+    font-size: set-size(48px);
+    margin-bottom: set-size(24px);
 }
 
 .p-heading__primary.--center {
     text-align: center;
 }
 
+.p-heading__secondary {
+    font-size: set-size(24px);
+    margin-bottom: set-size(24px);
+}
+
+.p-heading__secondary.--center {
+    text-align: center;
+}
+
+@include mq(tab) {
+    .p-heading__primary {
+        font-size: 8vw;
+        margin-bottom: set-size(64px);
+    }
+}
+
 .p-heading__news {
     font-size: set-size(20px);
-    margin-bottom: set-size(16px);
 }
