アニメーションの追加

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,3 +63,5 @@
 -----------------------------------------------------*/
 
 @import 'animationAndJS/headerFloat';
+@import 'animationAndJS/typingAnimation';
+@import 'animationAndJS/_fluffyInViewAnimation';
