レスポンシブ対応

--- a/src/scss/animationAndJS/_fluffyInViewAnimation.scss
+++ b/src/scss/animationAndJS/_fluffyInViewAnimation.scss
@@ -1,5 +1,8 @@
 @charset 'UTF-8';
-$pattern: ( "up": translateY(10px), "down": translateY(-10px), "left": translateX(40px), "right": translateX(-40px));
+//====================================
+//  Fluffy Inview Animation
+//====================================
+$pattern: ( "up": translateY(20px), "down": translateY(-10px), "left": translateX(40px), "right": translateX(-40px));
 //block
 @each $key,
 $value in $pattern {
