--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,7 +1,9 @@
 @charset 'UTF-8';
+
 /*
   Main
------------------------------------------------------*/
+*/
+
 .l-main {
-  clear: both;
+    clear: both;
 }
