--- a/src/scss/object/project/_global-nav.scss
+++ b/src/scss/object/project/_global-nav.scss
@@ -19,6 +19,7 @@
 
 .p-globalNav li a {
     display: block;
+    font-weight: bold;
     padding: set-size(36px);
     text-align: center;
     letter-spacing: 2px;
