--- a/src/scss/animationAndJS/_typingAnimation.scss
+++ b/src/scss/animationAndJS/_typingAnimation.scss
@@ -1,4 +1,7 @@
 @charset 'UTF-8';
+//====================================
+//  Typing Animation
+//====================================
 .js-typing {
     opacity: 0;
     transition: all .3s ease-in-out;
