--- a/src/scss/foundation/_setting.scss
+++ b/src/scss/foundation/_setting.scss
@@ -1,10 +1,10 @@
 @charset 'UTF-8';
-// -----------------------------------
-//  Layout Settings
-//------------------------------------
+///============================================
+//  Layout Setting
+//============================================
 // Contentの幅
 $content-width-full: 1200px !default;
-$content-width-middle: 800px !default;
+$content-width-middle: 560px !default;
 // ブレークポイント
 $breakpoints: ( 'sp': 480px, 'tab': 768px, 'lap': 1024px, 'desk': 1200px, 'vr': 1024px) !default;
 //====================================
