--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -1,3 +1,5 @@
+@charset 'UTF-8';
+
 /*
   Section
 */
@@ -8,4 +10,10 @@
 
 .l-section.--heroLess {
     padding-top: set-size(120px);
+}
+
+@include mq(tab) {
+    .l-section {
+        padding-top: set-size(96px);
+    }
 }
