--- a/src/scss/object/project/_footer.scss
+++ b/src/scss/object/project/_footer.scss
@@ -9,9 +9,6 @@
     padding: set-size(40px) 0;
     background-color: $sub-color;
     text-align: center;
-    @include mq(tab) {
-        padding: set-size(80px) 0;
-    }
 }
 
 .p-footer__title {
@@ -31,4 +28,24 @@
 
 .p-footer__copyright {
     font-size: set-size(12px);
+}
+
+@include mq(tab) {
+    .p-footer {
+        text-align: left;
+    }
+    .p-footer__title {
+        font-size: set-size(24px);
+    }
+    .p-footer__address,
+    .p-footer__tel {
+        font-size: set-size(16px);
+    }
+    .p-footer__copyright {
+        font-size: set-size(16px);
+        text-align: right;
+    }
+    .p-footer__copyright {
+        margin-top: set-size(90px);
+    }
 }
