--- a/src/scss/object/project/_button.scss
+++ b/src/scss/object/project/_button.scss
@@ -5,6 +5,7 @@
 */
 
 .p-button {
+    position: relative;
     display: inline-block;
     margin: 0 auto;
     width: 200px;
@@ -12,6 +13,33 @@
     padding: set-size(16px) 0;
     color: $secondary-text-color;
     text-align: center;
+    border: 2px solid $accent-color;
+}
+
+.p-button:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    right: 25px;
+    width: 12px;
+    height: 12px;
+    transform: rotate(45deg);
+    border-top: 2px solid $main-color;
+    border-right: 2px solid $main-color;
+}
+
+.p-button:hover {
+    background-color: transparent;
+    color: $primary-text-color;
+}
+
+.p-button:hover:after {
+    background-color: transparent;
+    border-top: 2px solid $accent-color;
+    border-right: 2px solid $accent-color;
+    right: 15px;
 }
 
 .p-button.--short {
@@ -29,8 +57,8 @@
     right: 5%;
     z-index: 1;
     margin: auto 0;
-    width: 54px;
-    height: 54px;
+    width: 24px;
+    height: 24px;
     background-color: transparent;
 }
 
@@ -42,7 +70,7 @@
     left: 0;
     display: block;
     margin: auto;
-    width: 54px;
+    width: 24px;
     height: 2px;
     background-color: $accent-color;
 }
@@ -55,15 +83,15 @@
     height: 100%;
     background-color: inherit;
     content: '';
-    transition: transform .2s ease-in-out;
+    transition: transform .3s ease-in-out;
 }
 
 .p-button--hamburger__line:before {
-    top: -8px;
+    top: -5px;
 }
 
 .p-button--hamburger__line:after {
-    top: 8px;
+    top: 5px;
 }
 
 .is-active-drawer .p-button--hamburger__line {
@@ -82,4 +110,20 @@
 
 .is-active-drawer .p-button--hamburger__line:after {
     transform: rotate(45deg);
+}
+
+@include mq(tab) {
+    .p-button--hamburger {
+        width: 54px;
+        height: 54px;
+    }
+    .p-button--hamburger__line {
+        width: 54px;
+    }
+    .p-button--hamburger__line:before {
+        top: -8px;
+    }
+    .p-button--hamburger__line:after {
+        top: 8px;
+    }
 }
