--- a/src/scss/object/component/_button.scss
+++ b/src/scss/object/component/_button.scss
@@ -11,8 +11,7 @@
     background-color: transparent;
     cursor: pointer;
     appearance: none;
-    transition: box-shadow .3s ease-in-out;
-    box-shadow: 0 0 80px 40px rgba(131, 199, 225, 0);
+    transition: all .3s ease-in-out;
     &:focus {
         box-shadow: none;
         outline: none;
