--- a/src/scss/animationAndJS/_headerFloat.scss
+++ b/src/scss/animationAndJS/_headerFloat.scss
@@ -2,9 +2,8 @@
 //====================================
 //  Typing Animation
 //====================================
-.js-typing {
-    opacity: 0;
-    transition: all .3s ease-in-out;
+.js-header {
+    transform: translateY(-120%);
 }
 
 .inview .js-header {
