--- a/src/scss/object/project/_contents.scss
+++ b/src/scss/object/project/_contents.scss
@@ -62,9 +62,15 @@
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-repeat: no-repeat;
     background-position: center center;
+}
+
+@include mq(tab) {
+    .p-fixedBackground {
+        background-attachment: fixed;
+    }
 }
 
 
