--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -15,8 +15,15 @@ body {
 }
 
 html {
+    scroll-behavior: smooth;
     box-sizing: border-box;
     height: 100%;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    html {
+        scroll-behavior: auto;
+    }
 }
 
 img {
