オープニングアニメーション実装

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,3 +71,4 @@
 @import 'animationAndJS/typingAnimation';
 @import 'animationAndJS/fluffyInViewAnimation';
 @import 'animationAndJS/pageTopButton';
+@import 'animationAndJS/openingAnimation';
