細かな修正

--- a/src/scss/animationAndJS/_headerFloat.scss
+++ b/src/scss/animationAndJS/_headerFloat.scss
@@ -4,6 +4,7 @@
 //====================================
 .js-header {
     transform: translateY(-120%);
+    transition: transform .3s ease-in-out
 }
 
 .inview .js-header {
