--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -20,6 +20,12 @@ html {
     height: 100%;
 }
 
+html .is-active-drawer,
+body.is-active-drawer {
+    overflow: hidden;
+    height: 100%;
+}
+
 @media (prefers-reduced-motion: reduce) {
     html {
         scroll-behavior: auto;
