--- a/src/scss/object/project/_global-nav.scss
+++ b/src/scss/object/project/_global-nav.scss
@@ -11,7 +11,7 @@
     bottom: 0;
     left: 0;
     visibility: hidden;
-    padding-top: set-size(64px);
+    height: 100%;
     background-color: $main-color;
     opacity: 0;
     transition: all .3s ease-in-out;
@@ -26,6 +26,10 @@
     background-repeat: no-repeat;
     background-position: center center;
     display: none;
+}
+
+.p-globalNav {
+    padding-top: set-size(48px);
 }
 
 .p-globalNav li a {
