style.cssとテーマサムネイルの設定

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-/*!
-Theme Name: Aileron
+/*
+Theme Name: Simple Animation Theme
+Theme URL: ×××
+Description: ポートフォリオ用のテーマです。
+Author: Hidekazu Meguro
+Version: 1.0
 */
