--- a/src/scss/animationAndJS/_openingAnimation.scss
+++ b/src/scss/animationAndJS/_openingAnimation.scss
@@ -1,10 +1,7 @@
 @charset 'UTF-8';
-///============================================
-//  Opening Animation
-//============================================
 
-/* 
-  Opening Logo
+/*
+  Opening Animation
 */
 
 .p-body__inner {
