--- a/src/scss/animationAndJS/_pageTopButton.scss
+++ b/src/scss/animationAndJS/_pageTopButton.scss
@@ -1,7 +1,9 @@
 @charset 'UTF-8';
-//====================================
-//  Page Top Move Animation
-//====================================
+
+/*
+  Page Top Move Animation
+*/
+
 .p-topButton {
     position: fixed;
     right: 5%;
