--- a/src/scss/animationAndJS/_typingAnimation.scss
+++ b/src/scss/animationAndJS/_typingAnimation.scss
@@ -1,7 +1,9 @@
 @charset 'UTF-8';
-//====================================
-//  Typing Animation
-//====================================
+
+/*
+  Typing Animation
+*/
+
 .js-typing {
     opacity: 0;
     transition: all .3s ease-in-out;
