--- a/src/scss/foundation/_reset.scss
+++ b/src/scss/foundation/_reset.scss
@@ -1,14 +1,14 @@
 /**
- * File Name : common.css
+ * File Name : main.css
  * Version : 1.0
- * Description : 全ページ共通CSSファイル
- * Since : 2019-09-17
+ * Description : Sassによる管理、アニメーション・WordPress等の独自クラス別コンポーネント管理
+ * Since : 2021-3-27
  *
  * ---- Table of Contents ----
  *
  * 1.0 - Foundation
  *    1.1 - Reset
- *    1.2 - Default Style
+ *    1.2 - Base
  *
  * 2.0 - Layout
  *    2.1 - Centering
@@ -16,28 +16,45 @@
  *    2.4 - Main
  *    2.5 - Section
  *    2.6 - Footer
+ *    2.7 - Basic Button
  *
  * 3.0 - Object
  *    3.1 - Component
-              -Grid
-              -Card
-              -Media
-              -Button
-              -Screen reader text
- *    3.2 - Project
-              -button
-              -Heading
-              -Hero
-              
-
- *    3.3 - Utility
+ *            - Grid
+ *            - Button
+ *            - Form
+ *            - Swiper.js
+ *            - WordPress
+ *            - Screen reader text
  *
+ *    3.2 - Project
+ *            - Header
+ *            - Global-Nav
+ *            - Hero
+ *            - Heading
+ *            - Media
+ *            - Form
+ *            - Define List
+ *            - BackGround Image
+ *            - Article
+ *            - Data
+ *            - Contents
+ *            - Footer
+ *            - Basic Button 
+ *            - Hamburger Button
+ *
+ * 4.0 - Animation And JavaScript
+ *            - Header Float
+ *            - Typing Animation
+ *            - Fluffy InView Animation
+ *            - Page Top Button
+ *            - Opening Animation
  */
 
 
 /* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
+ * v2.0 | 20110126
+ * License: none (public domain)
 */
 
 html,
