404ページ作成

--- a/src/scss/object/project/_heading.scss
+++ b/src/scss/object/project/_heading.scss
@@ -27,6 +27,10 @@
     font-size: set-size(20px);
 }
 
+.p-heading__news.--center {
+    text-align: center;
+}
+
 @include mq(tab) {
     .p-heading__primary {
         font-size: 8vw;
