画像パスを相対パスに変更

--- a/src/scss/object/component/_dependence.scss
+++ b/src/scss/object/component/_dependence.scss
@@ -50,6 +50,18 @@
     height: 100vh;
 }
 
+.slide-img.--first {
+    background-image: url('../img/hero1.jpg');
+}
+
+.slide-img.--second {
+    background-image: url('../img/hero2.jpg');
+}
+
+.slide-img.--third {
+    background-image: url('../img/hero3.jpg');
+}
+
 
 /*
   WordPress
