--- a/src/scss/object/project/_bgImage.scss
+++ b/src/scss/object/project/_bgImage.scss
@@ -5,23 +5,23 @@
 */
 
 .p-fixedBackground.--primary {
-    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/top_aboutus.jpg');
+    background-image: url('../img/top_aboutus.jpg');
 }
 
 .p-fixedBackground.--secondary {
-    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/top_works.jpg');
+    background-image: url('../img/top_works.jpg');
 }
 
 .p-fixedBackground.--aboutus {
-    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/aboutus_hero.jpg');
+    background-image: url('../img/aboutus_hero.jpg');
 }
 
 .p-fixedBackground.--news {
-    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/news_hero.jpg');
+    background-image: url('../img/news_hero.jpg');
 }
 
 .p-fixedBackground.--contact {
-    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/contact_hero.jpg');
+    background-image: url('../img/contact_hero.jpg');
 }
 
 .p-fixedBackground {
