--- a/src/scss/object/project/_global-nav.scss
+++ b/src/scss/object/project/_global-nav.scss
@@ -18,7 +18,7 @@
 }
 
 .p-globalNav__thumbnail {
-    background-image: url('//dummyarchitects.local/wp-content/themes/dummy-architects/dist/img/menu.jpg');
+    background-image: url('../img/menu.jpg');
     position: relative;
     height: 100vh;
     width: 100vw;
